# final-project-repo-team-7

./: .gitignore  README.md  pyproject.toml
american_analyzer/mypkg/: mymodule.py  utils.py
data/: demographic_group_american_nonamerican_similarity_results.csv  in_group_words_key.csv  out_group_words_key.csv  race_categories.csv  religion_categories.csv  vader_validation_sample.csv
notebooks/: Temporal.ipynb  Vader_Group_Sentiment.ipynb  eda.ipynb  llm_adj_analysis.ipynb  rachel_llm_eda.ipynb  shreya_eda.ipynb  temporal.ipynb  willow.ipynb
scripts/: clean_data.py  create_dataframe.py  hello_rachel.py  hello_shreya.py  hello_willow.py
src/mypkg/: mymodule.py
